--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         "customer-import"
     ],
     "require": {
-        "php": "^7||^8",
+        "php": "^8",
         "magento/framework": "^103"
     },
     "type": "magento2-module",
-    "version": "2.0.2",
+    "version": "1.0.0",
     "license": [
         "MIT"
     ],
