--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     },
     "type": "magento2-module",
     "version": "1.0.0",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "license": [
         "MIT"
     ],
