--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "ninjacoder30/module-customerimport",
     "description": "A Magento 2 module for importing customers from CSV and JSON",
+    "type": "magento2-module",
+    "version": "1.0.0",
     "keywords": [
         "dev",
         "magento",
@@ -11,12 +13,8 @@
         "php": "^8",
         "magento/framework": "^103"
     },
-    "type": "magento2-module",
-    "version": "1.0.0",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
     "license": [
-        "MIT"
+        "proprietary"
     ],
     "autoload": {
         "files": [
